<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/widget_logo_size"
            android:layout_height="@dimen/widget_logo_size"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/widget_margin"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/logo_description"
            android:src="@drawable/icon">
        </ImageView>

        <TextView
            android:id="@+id/widget_name"
            style="@style/h6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/widget_margin"
            android:text="@string/favorite_news"
            android:textAlignment="center"
            android:textColor="@color/text_white" />

    </LinearLayout>

    <ListView
        android:id="@+id/list_view_widget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/widget_background"
        android:divider="@drawable/list_divider"
        android:dividerHeight="@dimen/widget_divider_height" />

    <TextView
        android:id="@+id/empty_view"
        style="@style/h6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/widget_background"
        android:text="@string/error_message"
        android:textAlignment="center" />

</LinearLayout>