<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/list_item_margin"
    android:layout_marginEnd="@dimen/list_item_margin"
    android:layout_marginBottom="@dimen/list_item_margin"
    android:elevation="@dimen/elevation_card_4">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/favoriteNewsHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:padding="8dp">

        <ImageView
            android:id="@+id/favoriteNews_imageView"
            android:layout_width="@dimen/list_item_thumbnail_size"
            android:layout_height="@dimen/list_item_thumbnail_size"
            android:contentDescription="@string/thumbnail_description"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/favorite_title_textView"
            style="@style/h6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/list_item_margin"
            android:layout_marginTop="@dimen/list_item_margin"
            android:ellipsize="end"
            android:maxLines="3"
            android:textColor="@color/text_black"
            app:layout_constraintEnd_toEndOf="@+id/favorite_section_textView"
            app:layout_constraintStart_toEndOf="@+id/favoriteNews_imageView"
            app:layout_constraintTop_toBottomOf="@+id/favorite_section_textView"
            tools:text="@string/lorem_ipsum_medium" />

        <TextView
            android:id="@+id/favorite_section_textView"
            style="@style/subtitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/list_item_small_margin"
            android:layout_marginEnd="@dimen/list_item_small_margin"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/lorem_ipsum_short" />

        <TextView
            android:id="@+id/favorite_authors_textView"
            style="@style/subtitle1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="@+id/favorite_title_textView"
            app:layout_constraintStart_toStartOf="@+id/favorite_title_textView"
            app:layout_constraintTop_toBottomOf="@+id/favorite_title_textView"
            tools:text="@string/lorem_ipsum_short" />

        <TextView
            android:id="@+id/favorite_date_textView"
            style="@style/subtitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/list_item_margin"
            android:layout_marginEnd="@dimen/list_item_small_margin"
            android:layout_marginBottom="@dimen/list_item_small_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/favorite_authors_textView"
            tools:text="@string/lorem_ipsum_short" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    
</androidx.cardview.widget.CardView>